# M30-RB

./: .gitignore  LICENSE  README.md  requirements.txt
evaluation/: README.md  __init__.py  bag_utils.py  debug_gt_alignment.py  experiments.yaml  ground_truth.py  metrics.py  npz_to_ply.py  plots.py  requirements.txt  run_experiments.py
ros2_ws/src/holoocean_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/holoocean_bridge/config/: custom_scenario.json  imaging_qos.yaml
ros2_ws/src/holoocean_bridge/holoocean_bridge/: node.py
ros2_ws/src/holoocean_bridge/launch/: holoocean_sim.launch.py  slam_and_mapping.launch.py
ros2_ws/src/holoocean_bridge/resource/: holoocean_bridge
ros2_ws/src/profiling_frontend/: package.xml  setup.cfg  setup.py
ros2_ws/src/profiling_frontend/launch/: profiling_frontend.launch.py
ros2_ws/src/profiling_frontend/profiling_frontend/: node.py
ros2_ws/src/profiling_frontend/resource/: profiling_frontend
ros2_ws/src/profiling_frontend/rviz/: slam_mapping.rviz
ros2_ws/src/slam_backend/: package.xml  setup.cfg  setup.py
ros2_ws/src/slam_backend/config/: slam.yaml
ros2_ws/src/slam_backend/launch/: isam2_backend.launch.py
ros2_ws/src/slam_backend/resource/: slam_backend
ros2_ws/src/slam_backend/slam_backend/: node.py
ros2_ws/src/wasd_teleop/: package.xml  setup.py
ros2_ws/src/wasd_teleop/resource/: wasd_teleop
ros2_ws/src/wasd_teleop/wasd_teleop/: teleop_wasd.py
tools/: evaluate_slam.sh  export_odometry_to_tum.py  straight_recorder_ros2.py
