<?xml version="1.0"?>
<package format="3">
  <name>holoocean_bridge</name>
  <version>0.0.1</version>
  <description>ROS 2 bridge for HoloOcean (publishes IMU/DVL/imaging sonar, consumes cmd_vel)</description>

  <maintainer email="nicolai.enstad.haraldseth@nmbu.no">Nicolai Enstad Haraldseth</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <!-- holoocean is a pip dep, not aros dep -->
</package>
